--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
